Fix too small images in activity

--- a/src/main/web/src/app/activity/activity-search-result/activity-search-result.component.scss
+++ b/src/main/web/src/app/activity/activity-search-result/activity-search-result.component.scss
@@ -39,6 +39,7 @@ mat-card-content {
 
     img {
         max-width: 100%;
+        min-width: 200px;
         max-height: 200px;
         border-radius: 5px;
     }
